--- a/_i18n_xliff/UnitedPizzaHelper Localizations/ru.xcloc/Localized Contents/ru.xliff
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/ru.xcloc/Localized Contents/ru.xliff
@@ -660,17 +660,18 @@ Tap anywhere to dismiss.</source>
         <target state="translated">Вернитесь и выберите другой файл</target>
         <note/>
       </trans-unit>
-      <trans-unit id="gachaKit.exchange.chooseProfiles.export.prompt" xml:space="preserve">
-        <source>Choose the gacha profiles to export.
-Empty selection indicates selecting all profiles.</source>
-        <target state="translated">Выберите профили гача для экспорта Пустой выбор означает выбор всех профилей</target>
+      <trans-unit id="gachaKit.exchange.chooseGachaPullers.export.prompt" xml:space="preserve">
+        <source>Choose the gacha pullers to export.
+Empty selection indicates selecting all gacha pullers.</source>
+        <target state="translated">Выберите владельцев гача для экспорта.
+Пустой выбор означает экспорт всех владельцев гача.</target>
         <note/>
       </trans-unit>
-      <trans-unit id="gachaKit.exchange.chooseProfiles.import.prompt" xml:space="preserve">
-        <source>Choose the gacha profiles to import.
-Empty selection indicates selecting all profiles.</source>
-        <target state="translated">Выберите профили гача для импорта
-Пустой выбор означает выбор всех профилей</target>
+      <trans-unit id="gachaKit.exchange.chooseGachaPullers.import.prompt" xml:space="preserve">
+        <source>Choose the gacha pullers to import.
+Empty selection indicates selecting all gacha pullers.</source>
+        <target state="translated">Выберите владельцев гача для импорта.
+Пустой выбор означает импорт всех владельцев гача.</target>
         <note/>
       </trans-unit>
       <trans-unit id="gachaKit.exchange.export.clickHereToExport" xml:space="preserve">
@@ -752,8 +753,8 @@ Empty selection indicates selecting all profiles.</source>
         <note/>
       </trans-unit>
       <trans-unit id="gachaKit.exchange.import.succeeded" xml:space="preserve">
-        <source>Successfully imported all entries from the specified profile(s) of the given file.</source>
-        <target state="translated">Успешно импортированы все записи из указанных профилей указанного файла.</target>
+        <source>Successfully imported all entries from the specified gacha puller(s) of the given file.</source>
+        <target state="translated">Успешно импортированы все записи из указанных владельцев гача указанного файла.</target>
         <note/>
       </trans-unit>
       <trans-unit id="gachaKit.exchange.import.succeededReport.sectionHeader" xml:space="preserve">
@@ -836,9 +837,9 @@ Empty selection indicates selecting all profiles.</source>
         <target state="translated">⚠︎ Итальянский и турецкий языки поддерживаются только в Genshin Impact.</target>
         <note/>
       </trans-unit>
-      <trans-unit id="gachaKit.gachaProfileMenu.chooseProfile" xml:space="preserve">
-        <source>Choose Profile</source>
-        <target state="translated">Выберите профиль</target>
+      <trans-unit id="gachaKit.gachaPullerMenu.chooseGachaPuller" xml:space="preserve">
+        <source>Choose Gacha Puller</source>
+        <target state="translated">Выберите владельца гача</target>
         <note/>
       </trans-unit>
       <trans-unit id="gachaKit.getRecord.chart.count" xml:space="preserve">
@@ -1007,13 +1008,13 @@ Empty selection indicates selecting all profiles.</source>
         <note/>
       </trans-unit>
       <trans-unit id="gachaKit.management.clickHereToDeleteAllRecordsOfThisGPID" xml:space="preserve">
-        <source>Click Here to Remove All Records Under This Gacha Profile</source>
-        <target state="translated">Нажмите здесь, чтобы удалить все записи под этим профилем гача</target>
+        <source>Click Here to Remove All Records Under This Gacha Puller</source>
+        <target state="translated">Нажмите здесь, чтобы удалить все записи под этим владельцем гача</target>
         <note/>
       </trans-unit>
       <trans-unit id="gachaKit.management.confirmingDeletingAllRecordsOfThisGPID" xml:space="preserve">
-        <source>Confirming removal of all records under this gacha profile. Proceed?</source>
-        <target state="translated">Подтверждение удаления всех записей под этим профилем гача. Продолжить?</target>
+        <source>Confirming removal of all records under this gacha puller. Proceed?</source>
+        <target state="translated">Подтверждение удаления всех записей под этим владельцем гача. Продолжить?</target>
         <note/>
       </trans-unit>
       <trans-unit id="gachaKit.management.currentGame" xml:space="preserve">
@@ -1021,14 +1022,14 @@ Empty selection indicates selecting all profiles.</source>
         <target state="translated">Текущая игра</target>
         <note/>
       </trans-unit>
+      <trans-unit id="gachaKit.management.gachaPullerToPurge" xml:space="preserve">
+        <source>Gacha Puller (Game &amp; UID) to Delete</source>
+        <target state="translated">Владелец гача (игра и UID) для удаления</target>
+        <note/>
+      </trans-unit>
       <trans-unit id="gachaKit.management.navTitle" xml:space="preserve">
         <source>Managing Gacha Records</source>
         <target state="translated">Управление записями Гача</target>
-        <note/>
-      </trans-unit>
-      <trans-unit id="gachaKit.management.uidAndGameToPurge" xml:space="preserve">
-        <source>Game &amp; UID to Delete</source>
-        <target state="translated">Игра и UID для удаления</target>
         <note/>
       </trans-unit>
       <trans-unit id="gachaKit.menu.exchangeGachaRecords" xml:space="preserve">
@@ -1046,9 +1047,9 @@ Empty selection indicates selecting all profiles.</source>
         <target state="translated">Список записей iCloud Gacha из старых приложений Pizza</target>
         <note/>
       </trans-unit>
-      <trans-unit id="gachaKit.menu.rebuildGachaUIDList" xml:space="preserve">
-        <source>Rebuild Gacha UID List</source>
-        <target state="translated">Перестроить список Gacha UID</target>
+      <trans-unit id="gachaKit.menu.reloadData" xml:space="preserve">
+        <source>Reload Data</source>
+        <target state="translated">Перезагрузить данные</target>
         <note/>
       </trans-unit>
       <trans-unit id="gachaKit.poolFilterLabel.byGame.GI" xml:space="preserve">
@@ -1171,14 +1172,14 @@ Empty selection indicates selecting all profiles.</source>
         <target state="translated">Записи гача не найдены</target>
         <note/>
       </trans-unit>
-      <trans-unit id="gachaKit.prompt.pleaseChooseGachaProfile" xml:space="preserve">
-        <source>Please choose a gacha profile. If you can’t see one, then please import some gacha records first.</source>
-        <target state="translated">Пожалуйста, выберите профиль гача. Если вы его не видите, пожалуйста, сначала импортируйте записи гача.</target>
+      <trans-unit id="gachaKit.prompt.pleaseChooseGachaPuller" xml:space="preserve">
+        <source>Please choose a gacha puller. If you can't see one, then please import some gacha records first.</source>
+        <target state="translated">Пожалуйста, выберите владельца гача. Если вы его не видите, пожалуйста, сначала импортируйте записи гача.</target>
         <note/>
       </trans-unit>
       <trans-unit id="gachaKit.prompt.remoteChangesDetected.withRecommendedAction" xml:space="preserve">
-        <source>Remote iCloud SwiftData changes are detected and are already applied in the backend. Please check the top-trailing dropdown menu to run “Rebuild Gacha UID List” or restart this app to let those changes visible to you.</source>
-        <target state="translated">Обнаружены удалённые изменения iCloud SwiftData, которые уже применены на сервере. Проверьте выпадающее меню в правом верхнем углу, чтобы выполнить «Перестроить список Gacha UID», или перезапустите приложение, чтобы увидеть эти изменения.</target>
+        <source>Remote iCloud SwiftData changes are detected and are already applied in the backend. Please check the top-trailing dropdown menu to run “Reload Data” or restart this app to let those changes visible to you.</source>
+        <target state="translated">Обнаружены удалённые изменения iCloud SwiftData, которые уже применены на сервере. Проверьте выпадающее меню в правом верхнем углу, чтобы выполнить «Перезагрузить данные», или перезапустите приложение, чтобы увидеть эти изменения.</target>
         <note/>
       </trans-unit>
       <trans-unit id="gachaKit.reviewFromAppraiser.gi" xml:space="preserve">
